<resources>
    <string name="app_name">Bathing Sites</string>
    <string name="action_settings">Settings</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="address">Address</string>
    <string name="longitude">Longitude</string>
    <string name="latitude">Latitude</string>
    <string name="grade">Grade</string>
    <string name="water_temp">Water Temp</string>
    <string name="date_water_temp">Date for temp</string>
    <string name="action_clear">Clear</string>
    <string name="action_save">Save</string>
    <string name="name_error">Name is required</string>
    <string name="longitude_error">Longitude is required</string>
    <string name="latitude_error">Latitude is required</string>
    <string name="address_error">Address is required</string>
    <string name="current_bathsite_weather">Current bathsite weather</string>
    <string name="current_weather">Current weather</string>
    <string name="get_current_weather">Getting current weather..</string>
    <string name="ok">OK</string>
    <string name="downloading_weather">Downloading weather info</string>
    <string name="title_activity_new_bathing_site">New Bathing Site</string>
    <string name="get_weather_url">Get weather URL</string>
    <string name="default_weather_url">http://dt031g.programvaruteknik.nu/badplatser/weather.php</string>
    <string name="title_activity_download_bathing_sites">DownloadBathingSites</string>
    <string name="action_download_bathsite">Download bathingsites</string>
    <string name="default_bathingsites_url">http://dt031g.programvaruteknik.nu/badplatser/koordinater/</string>
    <string name="get_bathingsites_url">Get bathingsites URL</string>
    <string name="download_file">Downloading file..</string>
    <string name="saving_bathsites">Saving bathsites..</string>
    <string name="error_reading_weather">Error reading weather.</string>
    <string name="save_succesful">Saving bathsite successful!</string>
    <string name="bathsite_exists">Error saving bathsite. Current bathsite already exists!</string>
    <string name="not_all_fields">"Error saving bathsite. Not all requried fields has data.</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="title_activity_maps">Map</string>
    <string name="radius_default_value">50</string>
    <string name="radius_distance">Show bathsites in radius (km)</string>
    <string name="score">Score</string>
    <string name="with_temp">With temp</string>
    <string name="on_date">on date</string>
</resources>
